EstructuraDeDatos/AleJulianIsaacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SECURITY_OBJECTIVE_CLOSE

Grammar

Rule 0     S' -> doc_model
Rule 1     doc_model -> XML_VERSION doc_model
Rule 2     doc_model -> doc_comment doc_model
Rule 3     doc_model -> OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
Rule 4     office_model -> OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE
Rule 5     model_nodes -> MODEL_NODES_OPEN model_node model_nodes
Rule 6     model_nodes -> model_node model_nodes
Rule 7     model_nodes -> MODEL_NODES_CLOSE
Rule 8     model_node -> MODEL_NODE_OPEN model_node
Rule 9     model_node -> basic_info model_node
Rule 10    model_node -> threats model_node
Rule 11    model_node -> structure_security_policies model_node
Rule 12    model_node -> structure_security_relationships model_node
Rule 13    model_node -> vulnerabilities model_node
Rule 14    model_node -> security_controls model_node
Rule 15    model_node -> MODEL_NODE_CLOSE
Rule 16    basic_info -> BASIC_INFORMATION_OPEN basic_info
Rule 17    basic_info -> component_name basic_info
Rule 18    basic_info -> component_overview basic_info
Rule 19    basic_info -> intrinsical_properties basic_info
Rule 20    basic_info -> BASIC_INFORMATION_CLOSE
Rule 21    component_name -> COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
Rule 22    intrinsical_properties -> INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
Rule 23    intrinsical_properties -> properties_color intrinsical_properties
Rule 24    intrinsical_properties -> properties_material intrinsical_properties
Rule 25    intrinsical_properties -> properties_height intrinsical_properties
Rule 26    intrinsical_properties -> properties_weight intrinsical_properties
Rule 27    intrinsical_properties -> properties_count intrinsical_properties
Rule 28    intrinsical_properties -> properties_fragility intrinsical_properties
Rule 29    intrinsical_properties -> properties_property intrinsical_properties
Rule 30    intrinsical_properties -> INTRINSICAL_PROPERTIES_CLOSE
Rule 31    component_overview -> COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
Rule 32    properties_color -> PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
Rule 33    properties_material -> PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
Rule 34    properties_height -> PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
Rule 35    properties_weight -> PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE
Rule 36    properties_count -> PROPERTIES_COUNT_OPEN str PROPERTIES_COUNT_CLOSE
Rule 37    properties_fragility -> PROPERTIES_FRAGILITY_OPEN str PROPERTIES_FRAGILITY_CLOSE
Rule 38    properties_property -> PROPERTIES_PROPERTY_OPEN str PROPERTIES_PROPERTY_CLOSE
Rule 39    threats -> THREATS_OPEN threats
Rule 40    threats -> threat threats
Rule 41    threats -> THREATS_CLOSE
Rule 42    threat -> THREAT_OPEN threat
Rule 43    threat -> threat_name threat
Rule 44    threat -> threat_description threat
Rule 45    threat -> threat_vulnerabilities threat
Rule 46    threat -> THREAT_CLOSE
Rule 47    threat_name -> THREAT_NAME_OPEN str THREAT_NAME_CLOSE
Rule 48    threat_description -> THREAT_DESCRIPTION_OPEN str THREAT_DESCRIPTION_CLOSE
Rule 49    threat_vulnerabilities -> THREAT_VULNERABILITIES_OPEN threat_vulnerabilities
Rule 50    threat_vulnerabilities -> threat_vulnerability threat_vulnerabilities
Rule 51    threat_vulnerabilities -> THREAT_VULNERABILITIES_CLOSE
Rule 52    threat_vulnerability -> VULNERABILITIES_VULNERABILITY_OPEN str VULNERABILITIES_VULNERABILITY_CLOSE
Rule 53    structure_security_policies -> security_policies
Rule 54    security_policies -> SECURITY_POLICIES_OPEN security_policies
Rule 55    security_policies -> security_policy security_policies
Rule 56    security_policies -> SECURITY_POLICIES_CLOSE
Rule 57    security_policy -> SECURITY_POLICY_OPEN ID GENERAL_CLOSE POLICY_NAME_OPEN STRING POLICY_NAME_CLOSE POLICY_DESCRIPTION_OPEN STRING POLICY_DESCRIPTION_CLOSE security_objectives_SP SECURITY_POLICY_CLOSE
Rule 58    security_objectives_SP -> SP_OBJECTIVES_OPEN SECURITY_OBJECTIVE_OPEN STRING SECUOBJ_OBJ_CLOSE SP_OBJECTIVES_CLOSE
Rule 59    additional_info_SP -> SP_ADDITIONAL_INFORMATION_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SP_ADDITIONAL_INFORMATION_CLOSE
Rule 60    structure_security_relationships -> security-relationships
Rule 61    security-relationships -> SECURITY_RELATIONSHIP_OPEN security-relationships
Rule 62    security-relationships -> linked-node security-relationships
Rule 63    security-relationships -> SECURITY_RELATIONSHIP_CLOSE
Rule 64    linked-node -> linked_node_open linked-node
Rule 65    linked-node -> relationship-type linked-node
Rule 66    linked-node -> LINKED_NODE_CLOSE
Rule 67    linked_node_open -> LINKED_NODE_OPEN ID GENERAL_CLOSE
Rule 68    relationship-type -> RELATIONSHIP_TYPE_OPEN ID GENERAL_CLOSE relationship-type
Rule 69    relationship-type -> security-objectives_SR relationship-type
Rule 70    relationship-type -> security-objectives_SR RELATIONSHIP_TYPE_CLOSE
Rule 71    security-objectives_SR -> SECURITY_OBJECTIVES_OPEN security-objectives_SR
Rule 72    security-objectives_SR -> security-objective_SR security-objectives_SR
Rule 73    security-objectives_SR -> security-objective_SR SECURITY_OBJECTIVES_CLOSE
Rule 74    security-objective_SR -> SECURITY_OBJECTIVE_OPEN SELF_OBJECTIVE_OPEN SELF_OBJECTIVE_CLOSE PEER_OBJECTIVE_OPEN PEER_OBJECTIVE_CLOSE SECUOBJ_OBJ_CLOSE
Rule 75    vulnerabilities -> VULNERABILITIES_OPEN vulnerabilities
Rule 76    vulnerabilities -> vulnerability vulnerabilities
Rule 77    vulnerabilities -> VULNERABILITIES_CLOSE
Rule 78    vulnerability -> VULNERABILITY_OPEN vulnerability
Rule 79    vulnerability -> vulnerability_name vulnerability
Rule 80    vulnerability -> vulnerability_refSecurity vulnerability
Rule 81    vulnerability -> vulnerability_overview vulnerability
Rule 82    vulnerability -> vulnerability_description vulnerability
Rule 83    vulnerability -> vulnerability_impact vulnerability
Rule 84    vulnerability -> vulnerability_severity vulnerability
Rule 85    vulnerability -> vulnerability_additionalInfo vulnerability
Rule 86    vulnerability -> VULNERABILITY_CLOSE
Rule 87    vulnerability_refSecurity -> VULN_REFERENCE_OPEN vulnerability_refSecurity
Rule 88    vulnerability_refSecurity -> refSecurity vulnerability_refSecurity
Rule 89    vulnerability_refSecurity -> VULN_REFERENCE_CLOSE
Rule 90    vulnerability_additionalInfo -> VULN_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE VULN_ADDITIONAL_INFO_CLOSE
Rule 91    vulnerability_name -> VULN_NAME_OPEN str VULN_NAME_CLOSE
Rule 92    refSecurity -> REF_SECURITY_OPEN str REF_SECURITY_CLOSE
Rule 93    vulnerability_overview -> VULN_OVERVIEW_OPEN str VULN_OVERVIEW_CLOSE
Rule 94    vulnerability_description -> VULN_DESCRIPTION_OPEN str VULN_DESCRIPTION_CLOSE
Rule 95    vulnerability_impact -> VULN_IMPACT_OPEN str VULN_IMPACT_CLOSE
Rule 96    vulnerability_severity -> VULN_SEVERITY_OPEN str VULN_SEVERITY_CLOSE
Rule 97    security_controls -> SECURITY_CONTROLS_OPEN security_controls
Rule 98    security_controls -> security_control security_controls
Rule 99    security_controls -> SECURITY_CONTROLS_CLOSE
Rule 100   security_control -> SECURITY_CONTROL_OPEN security_control
Rule 101   security_control -> security_control_name security_control
Rule 102   security_control -> security_control_description security_control
Rule 103   security_control -> sec_policies security_control
Rule 104   security_control -> securityControl_additionalInfo security_control
Rule 105   security_control -> SECURITY_CONTROL_CLOSE
Rule 106   sec_policies -> SECCONT_SECURITY_POLICIES_OPEN sec_policies
Rule 107   sec_policies -> security_policyID sec_policies
Rule 108   sec_policies -> SECCONT_SECURITY_POLICIES_CLOSE
Rule 109   securityControl_additionalInfo -> SECCONT_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SECCONT_ADDITIONAL_INFO_CLOSE
Rule 110   security_control_name -> SECCONT_NAME_OPEN str SECCONT_NAME_CLOSE
Rule 111   security_control_description -> SECCONT_DESCRIPTION_OPEN str SECCONT_DESCRIPTION_CLOSE
Rule 112   security_policyID -> SECPOLICY_ID_OPEN str SECPOLICY_ID_CLOSE
Rule 113   doc_comment -> COMMENT_OPEN doc_comment
Rule 114   doc_comment -> str doc_comment
Rule 115   doc_comment -> GENERAL_CLOSE
Rule 116   str -> STRING str
Rule 117   str -> STRING

Terminals, with rules where they appear

ADDITIONAL_INFO_CLOSE : 59 90 109
ADDITIONAL_INFO_OPEN : 59 90 109
BASIC_INFORMATION_CLOSE : 20
BASIC_INFORMATION_OPEN : 16
COMMENT_OPEN         : 113
COMPONENT_NAME_CLOSE : 21
COMPONENT_NAME_OPEN  : 21
COMPONENT_OVERVIEW_CLOSE : 31
COMPONENT_OVERVIEW_OPEN : 31
GENERAL_CLOSE        : 57 67 68 115
ID                   : 57 67 68
INTRINSICAL_PROPERTIES_CLOSE : 30
INTRINSICAL_PROPERTIES_OPEN : 22
LINKED_NODE_CLOSE    : 66
LINKED_NODE_OPEN     : 67
MODEL_NODES_CLOSE    : 7
MODEL_NODES_OPEN     : 5
MODEL_NODE_CLOSE     : 15
MODEL_NODE_OPEN      : 8
OFFICE_DOCUMENT_CLOSE : 3
OFFICE_DOCUMENT_OPEN : 3
OFFICE_MODEL_CLOSE   : 4
OFFICE_MODEL_OPEN    : 4
PEER_OBJECTIVE_CLOSE : 74
PEER_OBJECTIVE_OPEN  : 74
POLICY_DESCRIPTION_CLOSE : 57
POLICY_DESCRIPTION_OPEN : 57
POLICY_NAME_CLOSE    : 57
POLICY_NAME_OPEN     : 57
PROPERTIES_COLOR_CLOSE : 32
PROPERTIES_COLOR_OPEN : 32
PROPERTIES_COUNT_CLOSE : 36
PROPERTIES_COUNT_OPEN : 36
PROPERTIES_FRAGILITY_CLOSE : 37
PROPERTIES_FRAGILITY_OPEN : 37
PROPERTIES_HEIGHT_CLOSE : 34
PROPERTIES_HEIGHT_OPEN : 34
PROPERTIES_MATERIAL_CLOSE : 33
PROPERTIES_MATERIAL_OPEN : 33
PROPERTIES_PROPERTY_CLOSE : 38
PROPERTIES_PROPERTY_OPEN : 38
PROPERTIES_WEIGHT_CLOSE : 35
PROPERTIES_WEIGHT_OPEN : 35
REF_SECURITY_CLOSE   : 92
REF_SECURITY_OPEN    : 92
RELATIONSHIP_TYPE_CLOSE : 70
RELATIONSHIP_TYPE_OPEN : 68
SECCONT_ADDITIONAL_INFO_CLOSE : 109
SECCONT_ADDITIONAL_INFO_OPEN : 109
SECCONT_DESCRIPTION_CLOSE : 111
SECCONT_DESCRIPTION_OPEN : 111
SECCONT_NAME_CLOSE   : 110
SECCONT_NAME_OPEN    : 110
SECCONT_SECURITY_POLICIES_CLOSE : 108
SECCONT_SECURITY_POLICIES_OPEN : 106
SECPOLICY_ID_CLOSE   : 112
SECPOLICY_ID_OPEN    : 112
SECUOBJ_OBJ_CLOSE    : 58 74
SECURITY_CONTROLS_CLOSE : 99
SECURITY_CONTROLS_OPEN : 97
SECURITY_CONTROL_CLOSE : 105
SECURITY_CONTROL_OPEN : 100
SECURITY_OBJECTIVES_CLOSE : 73
SECURITY_OBJECTIVES_OPEN : 71
SECURITY_OBJECTIVE_CLOSE : 
SECURITY_OBJECTIVE_OPEN : 58 74
SECURITY_POLICIES_CLOSE : 56
SECURITY_POLICIES_OPEN : 54
SECURITY_POLICY_CLOSE : 57
SECURITY_POLICY_OPEN : 57
SECURITY_RELATIONSHIP_CLOSE : 63
SECURITY_RELATIONSHIP_OPEN : 61
SELF_OBJECTIVE_CLOSE : 74
SELF_OBJECTIVE_OPEN  : 74
SP_ADDITIONAL_INFORMATION_CLOSE : 59
SP_ADDITIONAL_INFORMATION_OPEN : 59
SP_OBJECTIVES_CLOSE  : 58
SP_OBJECTIVES_OPEN   : 58
STRING               : 57 57 58 116 117
THREATS_CLOSE        : 41
THREATS_OPEN         : 39
THREAT_CLOSE         : 46
THREAT_DESCRIPTION_CLOSE : 48
THREAT_DESCRIPTION_OPEN : 48
THREAT_NAME_CLOSE    : 47
THREAT_NAME_OPEN     : 47
THREAT_OPEN          : 42
THREAT_VULNERABILITIES_CLOSE : 51
THREAT_VULNERABILITIES_OPEN : 49
VULNERABILITIES_CLOSE : 77
VULNERABILITIES_OPEN : 75
VULNERABILITIES_VULNERABILITY_CLOSE : 52
VULNERABILITIES_VULNERABILITY_OPEN : 52
VULNERABILITY_CLOSE  : 86
VULNERABILITY_OPEN   : 78
VULN_ADDITIONAL_INFO_CLOSE : 90
VULN_ADDITIONAL_INFO_OPEN : 90
VULN_DESCRIPTION_CLOSE : 94
VULN_DESCRIPTION_OPEN : 94
VULN_IMPACT_CLOSE    : 95
VULN_IMPACT_OPEN     : 95
VULN_NAME_CLOSE      : 91
VULN_NAME_OPEN       : 91
VULN_OVERVIEW_CLOSE  : 93
VULN_OVERVIEW_OPEN   : 93
VULN_REFERENCE_CLOSE : 89
VULN_REFERENCE_OPEN  : 87
VULN_SEVERITY_CLOSE  : 96
VULN_SEVERITY_OPEN   : 96
XML_VERSION          : 1
error                : 

Nonterminals, with rules where they appear

additional_info_SP   : 
basic_info           : 9 16 17 18 19
component_name       : 17
component_overview   : 18
doc_comment          : 2 113 114
doc_model            : 1 2 0
intrinsical_properties : 19 22 23 24 25 26 27 28 29
linked-node          : 62 64 65
linked_node_open     : 64
model_node           : 5 6 8 9 10 11 12 13 14
model_nodes          : 4 5 6
office_model         : 3
properties_color     : 23
properties_count     : 27
properties_fragility : 28
properties_height    : 25
properties_material  : 24
properties_property  : 29
properties_weight    : 26
refSecurity          : 88
relationship-type    : 65 68 69
sec_policies         : 103 106 107
security-objective_SR : 72 73
security-objectives_SR : 69 70 71 72
security-relationships : 60 61 62
securityControl_additionalInfo : 104
security_control     : 98 100 101 102 103 104
security_control_description : 102
security_control_name : 101
security_controls    : 14 97 98
security_objectives_SP : 57
security_policies    : 53 54 55
security_policy      : 55
security_policyID    : 107
str                  : 21 31 32 33 34 35 36 37 38 47 48 52 91 92 93 94 95 96 110 111 112 114 116
structure_security_policies : 11
structure_security_relationships : 12
threat               : 40 42 43 44 45
threat_description   : 44
threat_name          : 43
threat_vulnerabilities : 45 49 50
threat_vulnerability : 50
threats              : 10 39 40
vulnerabilities      : 13 75 76
vulnerability        : 76 78 79 80 81 82 83 84 85
vulnerability_additionalInfo : 85
vulnerability_description : 82
vulnerability_impact : 83
vulnerability_name   : 79
vulnerability_overview : 81
vulnerability_refSecurity : 80 87 88
vulnerability_severity : 84

Parsing method: LALR

state 0

    (0) S' -> . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (113) doc_comment -> . COMMENT_OPEN doc_comment
    (114) doc_comment -> . str doc_comment
    (115) doc_comment -> . GENERAL_CLOSE
    (116) str -> . STRING str
    (117) str -> . STRING

    XML_VERSION     shift and go to state 1
    OFFICE_DOCUMENT_OPEN shift and go to state 2
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

    doc_model                      shift and go to state 6
    str                            shift and go to state 7
    doc_comment                    shift and go to state 5

state 1

    (1) doc_model -> XML_VERSION . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (113) doc_comment -> . COMMENT_OPEN doc_comment
    (114) doc_comment -> . str doc_comment
    (115) doc_comment -> . GENERAL_CLOSE
    (116) str -> . STRING str
    (117) str -> . STRING

    XML_VERSION     shift and go to state 1
    OFFICE_DOCUMENT_OPEN shift and go to state 2
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

    doc_model                      shift and go to state 9
    str                            shift and go to state 7
    doc_comment                    shift and go to state 5

state 2

    (3) doc_model -> OFFICE_DOCUMENT_OPEN . office_model OFFICE_DOCUMENT_CLOSE
    (4) office_model -> . OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE

    OFFICE_MODEL_OPEN shift and go to state 11

    office_model                   shift and go to state 10

state 3

    (116) str -> STRING . str
    (117) str -> STRING .
    (116) str -> . STRING str
    (117) str -> . STRING

  ! shift/reduce conflict for STRING resolved as shift
    PROPERTIES_PROPERTY_CLOSE reduce using rule 117 (str -> STRING .)
    COMMENT_OPEN    reduce using rule 117 (str -> STRING .)
    GENERAL_CLOSE   reduce using rule 117 (str -> STRING .)
    VULNERABILITIES_VULNERABILITY_CLOSE reduce using rule 117 (str -> STRING .)
    VULN_SEVERITY_CLOSE reduce using rule 117 (str -> STRING .)
    VULN_DESCRIPTION_CLOSE reduce using rule 117 (str -> STRING .)
    PROPERTIES_COUNT_CLOSE reduce using rule 117 (str -> STRING .)
    THREAT_DESCRIPTION_CLOSE reduce using rule 117 (str -> STRING .)
    SECCONT_DESCRIPTION_CLOSE reduce using rule 117 (str -> STRING .)
    PROPERTIES_FRAGILITY_CLOSE reduce using rule 117 (str -> STRING .)
    PROPERTIES_WEIGHT_CLOSE reduce using rule 117 (str -> STRING .)
    PROPERTIES_COLOR_CLOSE reduce using rule 117 (str -> STRING .)
    PROPERTIES_MATERIAL_CLOSE reduce using rule 117 (str -> STRING .)
    REF_SECURITY_CLOSE reduce using rule 117 (str -> STRING .)
    SECCONT_NAME_CLOSE reduce using rule 117 (str -> STRING .)
    COMPONENT_NAME_CLOSE reduce using rule 117 (str -> STRING .)
    VULN_IMPACT_CLOSE reduce using rule 117 (str -> STRING .)
    SECPOLICY_ID_CLOSE reduce using rule 117 (str -> STRING .)
    VULN_OVERVIEW_CLOSE reduce using rule 117 (str -> STRING .)
    PROPERTIES_HEIGHT_CLOSE reduce using rule 117 (str -> STRING .)
    THREAT_NAME_CLOSE reduce using rule 117 (str -> STRING .)
    VULN_NAME_CLOSE reduce using rule 117 (str -> STRING .)
    COMPONENT_OVERVIEW_CLOSE reduce using rule 117 (str -> STRING .)
    STRING          shift and go to state 3

  ! STRING          [ reduce using rule 117 (str -> STRING .) ]

    str                            shift and go to state 12

state 4

    (113) doc_comment -> COMMENT_OPEN . doc_comment
    (113) doc_comment -> . COMMENT_OPEN doc_comment
    (114) doc_comment -> . str doc_comment
    (115) doc_comment -> . GENERAL_CLOSE
    (116) str -> . STRING str
    (117) str -> . STRING

    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

    str                            shift and go to state 7
    doc_comment                    shift and go to state 13

state 5

    (2) doc_model -> doc_comment . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (113) doc_comment -> . COMMENT_OPEN doc_comment
    (114) doc_comment -> . str doc_comment
    (115) doc_comment -> . GENERAL_CLOSE
    (116) str -> . STRING str
    (117) str -> . STRING

    XML_VERSION     shift and go to state 1
    OFFICE_DOCUMENT_OPEN shift and go to state 2
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

    doc_model                      shift and go to state 14
    str                            shift and go to state 7
    doc_comment                    shift and go to state 5

state 6

    (0) S' -> doc_model .



state 7

    (114) doc_comment -> str . doc_comment
    (113) doc_comment -> . COMMENT_OPEN doc_comment
    (114) doc_comment -> . str doc_comment
    (115) doc_comment -> . GENERAL_CLOSE
    (116) str -> . STRING str
    (117) str -> . STRING

    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

    str                            shift and go to state 7
    doc_comment                    shift and go to state 15

state 8

    (115) doc_comment -> GENERAL_CLOSE .

    XML_VERSION     reduce using rule 115 (doc_comment -> GENERAL_CLOSE .)
    OFFICE_DOCUMENT_OPEN reduce using rule 115 (doc_comment -> GENERAL_CLOSE .)
    COMMENT_OPEN    reduce using rule 115 (doc_comment -> GENERAL_CLOSE .)
    GENERAL_CLOSE   reduce using rule 115 (doc_comment -> GENERAL_CLOSE .)
    STRING          reduce using rule 115 (doc_comment -> GENERAL_CLOSE .)


state 9

    (1) doc_model -> XML_VERSION doc_model .

    $end            reduce using rule 1 (doc_model -> XML_VERSION doc_model .)


state 10

    (3) doc_model -> OFFICE_DOCUMENT_OPEN office_model . OFFICE_DOCUMENT_CLOSE

    OFFICE_DOCUMENT_CLOSE shift and go to state 16


state 11

    (4) office_model -> OFFICE_MODEL_OPEN . model_nodes OFFICE_MODEL_CLOSE
    (5) model_nodes -> . MODEL_NODES_OPEN model_node model_nodes
    (6) model_nodes -> . model_node model_nodes
    (7) model_nodes -> . MODEL_NODES_CLOSE
    (8) model_node -> . MODEL_NODE_OPEN model_node
    (9) model_node -> . basic_info model_node
    (10) model_node -> . threats model_node
    (11) model_node -> . structure_security_policies model_node
    (12) model_node -> . structure_security_relationships model_node
    (13) model_node -> . vulnerabilities model_node
    (14) model_node -> . security_controls model_node
    (15) model_node -> . MODEL_NODE_CLOSE
    (16) basic_info -> . BASIC_INFORMATION_OPEN basic_info
    (17) basic_info -> . component_name basic_info
    (18) basic_info -> . component_overview basic_info
    (19) basic_info -> . intrinsical_properties basic_info
    (20) basic_info -> . BASIC_INFORMATION_CLOSE
    (39) threats -> . THREATS_OPEN threats
    (40) threats -> . threat threats
    (41) threats -> . THREATS_CLOSE
    (53) structure_security_policies -> . security_policies
    (60) structure_security_relationships -> . security-relationships
    (75) vulnerabilities -> . VULNERABILITIES_OPEN vulnerabilities
    (76) vulnerabilities -> . vulnerability vulnerabilities
    (77) vulnerabilities -> . VULNERABILITIES_CLOSE
    (97) security_controls -> . SECURITY_CONTROLS_OPEN security_controls
    (98) security_controls -> . security_control security_controls
    (99) security_controls -> . SECURITY_CONTROLS_CLOSE
    (21) component_name -> . COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
    (31) component_overview -> . COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
    (22) intrinsical_properties -> . INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
    (23) intrinsical_properties -> . properties_color intrinsical_properties
    (24) intrinsical_properties -> . properties_material intrinsical_properties
    (25) intrinsical_properties -> . properties_height intrinsical_properties
    (26) intrinsical_properties -> . properties_weight intrinsical_properties
    (27) intrinsical_properties -> . properties_count intrinsical_properties
    (28) intrinsical_properties -> . properties_fragility intrinsical_properties
    (29) intrinsical_properties -> . properties_property intrinsical_properties
    (30) intrinsical_properties -> . INTRINSICAL_PROPERTIES_CLOSE
    (42) threat -> . THREAT_OPEN threat
    (43) threat -> . threat_name threat
    (44) threat -> . threat_description threat
    (45) threat -> . threat_vulnerabilities threat
    (46) threat -> . THREAT_CLOSE
    (54) security_policies -> . SECURITY_POLICIES_OPEN security_policies
    (55) security_policies -> . security_policy security_policies
    (56) security_policies -> . SECURITY_POLICIES_CLOSE
    (61) security-relationships -> . SECURITY_RELATIONSHIP_OPEN security-relationships
    (62) security-relationships -> . linked-node security-relationships
    (63) security-relationships -> . SECURITY_RELATIONSHIP_CLOSE
    (78) vulnerability -> . VULNERABILITY_OPEN vulnerability
    (79) vulnerability -> . vulnerability_name vulnerability
    (80) vulnerability -> . vulnerability_refSecurity vulnerability
    (81) vulnerability -> . vulnerability_overview vulnerability
    (82) vulnerability -> . vulnerability_description vulnerability
    (83) vulnerability -> . vulnerability_impact vulnerability
    (84) vulnerability -> . vulnerability_severity vulnerability
    (85) vulnerability -> . vulnerability_additionalInfo vulnerability
    (86) vulnerability -> . VULNERABILITY_CLOSE
    (100) security_control -> . SECURITY_CONTROL_OPEN security_control
    (101) security_control -> . security_control_name security_control
    (102) security_control -> . security_control_description security_control
    (103) security_control -> . sec_policies security_control
    (104) security_control -> . securityControl_additionalInfo security_control
    (105) security_control -> . SECURITY_CONTROL_CLOSE
    (32) properties_color -> . PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
    (33) properties_material -> . PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
    (34) properties_height -> . PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
    (35) properties_weight -> . PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE
    (36) properties_count -> . PROPERTIES_COUNT_OPEN str PROPERTIES_COUNT_CLOSE
    (37) properties_fragility -> . PROPERTIES_FRAGILITY_OPEN str PROPERTIES_FRAGILITY_CLOSE
    (38) properties_property -> . PROPERTIES_PROPERTY_OPEN str PROPERTIES_PROPERTY_CLOSE
    (47) threat_name -> . THREAT_NAME_OPEN str THREAT_NAME_CLOSE
    (48) threat_description -> . THREAT_DESCRIPTION_OPEN str THREAT_DESCRIPTION_CLOSE
    (49) threat_vulnerabilities -> . THREAT_VULNERABILITIES_OPEN threat_vulnerabilities
    (50) threat_vulnerabilities -> . threat_vulnerability threat_vulnerabilities
    (51) threat_vulnerabilities -> . THREAT_VULNERABILITIES_CLOSE
    (57) security_policy -> . SECURITY_POLICY_OPEN ID GENERAL_CLOSE POLICY_NAME_OPEN STRING POLICY_NAME_CLOSE POLICY_DESCRIPTION_OPEN STRING POLICY_DESCRIPTION_CLOSE security_objectives_SP SECURITY_POLICY_CLOSE
    (64) linked-node -> . linked_node_open linked-node
    (65) linked-node -> . relationship-type linked-node
    (66) linked-node -> . LINKED_NODE_CLOSE
    (91) vulnerability_name -> . VULN_NAME_OPEN str VULN_NAME_CLOSE
    (87) vulnerability_refSecurity -> . VULN_REFERENCE_OPEN vulnerability_refSecurity
    (88) vulnerability_refSecurity -> . refSecurity vulnerability_refSecurity
    (89) vulnerability_refSecurity -> . VULN_REFERENCE_CLOSE
    (93) vulnerability_overview -> . VULN_OVERVIEW_OPEN str VULN_OVERVIEW_CLOSE
    (94) vulnerability_description -> . VULN_DESCRIPTION_OPEN str VULN_DESCRIPTION_CLOSE
    (95) vulnerability_impact -> . VULN_IMPACT_OPEN str VULN_IMPACT_CLOSE
    (96) vulnerability_severity -> . VULN_SEVERITY_OPEN str VULN_SEVERITY_CLOSE
    (90) vulnerability_additionalInfo -> . VULN_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE VULN_ADDITIONAL_INFO_CLOSE
    (110) security_control_name -> . SECCONT_NAME_OPEN str SECCONT_NAME_CLOSE
    (111) security_control_description -> . SECCONT_DESCRIPTION_OPEN str SECCONT_DESCRIPTION_CLOSE
    (106) sec_policies -> . SECCONT_SECURITY_POLICIES_OPEN sec_policies
    (107) sec_policies -> . security_policyID sec_policies
    (108) sec_policies -> . SECCONT_SECURITY_POLICIES_CLOSE
    (109) securityControl_additionalInfo -> . SECCONT_ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_OPEN ADDITIONAL_INFO_CLOSE SECCONT_ADDITIONAL_INFO_CLOSE
    (52) threat_vulnerability -> . VULNERABILITIES_VULNERABILITY_OPEN str VULNERABILITIES_VULNERABILITY_CLOSE
    (67) linked_node_open -> . LINKED_NODE_OPEN ID GENERAL_CLOSE
    (68) relationship-type -> . RELATIONSHIP_TYPE_OPEN ID GENERAL_CLOSE relationship-type
    (69) relationship-type -> . security-objectives_SR relationship-type
    (70) relationship-type -> . security-objectives_SR RELATIONSHIP_TYPE_CLOSE
    (92) refSecurity -> . REF_SECURITY_OPEN str REF_SECURITY_CLOSE
    (112) security_policyID -> . SECPOLICY_ID_OPEN str SECPOLICY_ID_CLOSE
    (71) security-objectives_SR -> . SECURITY_OBJECTIVES_OPEN security-objectives_SR
    (72) security-objectives_SR -> . security-objective_SR security-objectives_SR
    (73) security-objectives_SR -> . security-objective_SR SECURITY_OBJECTIVES_CLOSE
    (74) security-objective_SR -> . SECURITY_OBJECTIVE_OPEN SELF_OBJECTIVE_OPEN SELF_OBJECTIVE_CLOSE PEER_OBJECTIVE_OPEN PEER_OBJECTIVE_CLOSE SECUOBJ_OBJ_CLOSE
